--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FFFF0000</color>
     <color name="blue">#FF3F51B5</color>
-    <color name="blue_1">#BBBBF4</color>
+    <color name="blue1">#BBBBF4</color>
+    <color name="pink">#FFF441B9</color>
+    <color name="purple">#FFA37DFD</color>
 </resources>
