--- a/app/src/main/res/layout/activity_all_result.xml
+++ b/app/src/main/res/layout/activity_all_result.xml
@@ -20,17 +20,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="@string/resultTitle"
+        android:gravity="center"
+        android:text="@string/allResultTitle"
         android:textColor="#5680D5"
         android:textSize="48sp"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="800dp"
+        android:layout_width="1050dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:orientation="horizontal"
@@ -39,40 +39,67 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4">
 
         <TextView
-            android:id="@+id/textView6"
-            android:layout_width="200dp"
+            android:id="@+id/date"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/item7"
+            android:textColor="#5680D5"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/item8"
+            android:textColor="#5680D5"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/questionNum"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/item1"
             android:textColor="#5680D5"
-            android:textSize="30sp"
-            android:gravity="center"/>
+            android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="200dp"
+            android:id="@+id/judge"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/item2"
             android:textColor="#5680D5"
-            android:textSize="30sp"
-            android:gravity="center"/>
+            android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView8"
-            android:layout_width="200dp"
+            android:id="@+id/question"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="@string/item3"
+            android:gravity="center"
+            android:text="@string/item5"
             android:textColor="#5680D5"
-            android:textSize="24sp"
-            android:gravity="center"/>
+            android:textSize="24sp" />
 
         <TextView
-            android:id="@+id/textView10"
-            android:layout_width="200dp"
+            android:id="@+id/answer"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/item6"
+            android:textColor="#5680D5"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/input"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/item4"
             android:textColor="#5680D5"
-            android:textSize="30sp"
-            android:gravity="center"/>
+            android:textSize="24sp" />
 
     </LinearLayout>
 
