--- a/app/src/main/res/layout/my_text_view1.xml
+++ b/app/src/main/res/layout/my_text_view1.xml
@@ -13,10 +13,11 @@
         android:orientation="horizontal">
         <TextView
             android:id="@+id/text_view"
-            android:layout_width="wrap_content"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:textColor="#424385"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:gravity="center"/>
     </LinearLayout>
 
     <!--下線を引くためだけのTextView-->
