--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#FFFF0000</color>
+    <color name="red">#F87373</color>
     <color name="blue">#FF3F51B5</color>
     <color name="blue1">#BBBBF4</color>
     <color name="pink">#FFF441B9</color>
-    <color name="purple">#FFA37DFD</color>
+    <color name="purple">#744ECF</color>
+    <color name="green">#8EC18A</color>
 </resources>
